task2: doing live search on the internet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["checkpointer", "kwargs", "langgraph", "openai"]
+  "cSpell.words": ["checkpointer", "kwargs", "langgraph", "openai", "tavily"]
 }
