--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@langchain/anthropic": "^0.3.11",
+    "@langchain/community": "^0.3.20",
     "@langchain/langgraph": "^0.2.36",
     "@langchain/openai": "^0.3.16",
     "dotenv": "^16.4.7",
